--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         })(window, document, "clarity", "script", "u10ieihl2z");
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MFJXL2E2NV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){ dataLayer.push(arguments); }
+
+      gtag('js', new Date());
+
+      gtag('config', 'G-MFJXL2E2NV', { send_page_view: false });
+    </script>
     <title>Portfolyo Sitem</title>
   </head>
   <body>
